tests/machine/x/cpp/right_join.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <iostream>
#include <string>
#include <vector>

struct Customer {
  int id;
  decltype(std::string("Alice")) name;
};
struct Order {
  int id;
  int customerId;
  int total;
};
struct Result {
  decltype(c.name) customerName;
  decltype(o) order;
};
int main() {
  std::vector<Customer> customers = {
      Customer{1, std::string("Alice")}, Customer{2, std::string("Bob")},
      Customer{3, std::string("Charlie")}, Customer{4, std::string("Diana")}};
  std::vector<Order> orders = {Order{100, 1, 250}, Order{101, 2, 125},
                               Order{102, 1, 300}};
  std::vector<Result> result = ([&]() {
    std::vector<Result> __items;
    for (auto c : customers) {
      {
        bool __matched0 = false;
        for (auto o : orders) {
          if (!((o.customerId == c.id)))
            continue;
          __matched0 = true;
          __items.push_back(Result{c.name, o});
        }
        if (!__matched0) {
          auto o = std::decay_t<decltype(*(orders).begin())>{};
          __items.push_back(Result{c.name, o});
        }
      }
    }
    return __items;
  })();
  std::cout << std::string("--- Right Join using syntax ---") << std::endl;
  for (auto entry : result) {
    if (entry.order) {
      {
        std::cout << std::string("Customer");
        std::cout << ' ';
        std::cout << entry.customerName;
        std::cout << ' ';
        std::cout << std::string("has order");
        std::cout << ' ';
        std::cout << entry.order.id;
        std::cout << ' ';
        std::cout << std::string("- $");
        std::cout << ' ';
        std::cout << entry.order.total;
        std::cout << std::endl;
      }
    } else {
      {
        std::cout << std::string("Customer");
        std::cout << ' ';
        std::cout << entry.customerName;
        std::cout << ' ';
        std::cout << std::string("has no orders");
        std::cout << std::endl;
      }
    }
  }
  return 0;
}
